[gd_scene load_steps=12 format=3 uid="uid://c57yq8evxe3w3"]

[ext_resource type="Script" uid="uid://bnuy4u6ii3xov" path="res://road_demos/procedural_generator/procedural_generator.gd" id="1_hjcst"]
[ext_resource type="Script" uid="uid://bxp3i4cnonh8y" path="res://addons/road-generator/nodes/road_manager.gd" id="2_066ph"]
[ext_resource type="Script" uid="uid://bgrkhnppgqig4" path="res://road_demos/procedural_generator/road_actor_manager.gd" id="3_18wel"]
[ext_resource type="PackedScene" uid="uid://bo55v7mk1vavq" path="res://road_demos/demo_resources/actors/RoadActor.tscn" id="4_re2kk"]
[ext_resource type="Script" uid="uid://cph7euje06kel" path="res://addons/road-generator/nodes/road_container.gd" id="5_pvynn"]
[ext_resource type="Material" uid="uid://dpashsuk5lr4x" path="res://addons/road-generator/resources/road_texture.material" id="6_11u7d"]
[ext_resource type="Script" uid="uid://difs1qg4mpcpw" path="res://addons/road-generator/nodes/road_point.gd" id="7_qlg0i"]
[ext_resource type="Script" uid="uid://bajcvw38oymwm" path="res://road_demos/procedural_generator/road_actor_spawner.gd" id="8_8qnhs"]
[ext_resource type="Theme" uid="uid://bos557pj10dx8" path="res://road_demos/demo_resources/demo_ui.theme" id="9_055ar"]
[ext_resource type="PackedScene" uid="uid://de542wwer561r" path="res://road_demos/demo_resources/demo_ui_common.tscn" id="10_farmj"]

[sub_resource type="Environment" id="Environment_v4pga"]
background_mode = 1
background_color = Color(0.609661, 0.733591, 0.806032, 1)

[node name="ProceduralGenerator" type="Node3D"]
script = ExtResource("1_hjcst")
target_node = NodePath("RoadManager/vehicles/Player/Camera3D")

[node name="RoadManager" type="Node3D" parent="."]
script = ExtResource("2_066ph")

[node name="vehicles" type="Node3D" parent="RoadManager"]
script = ExtResource("3_18wel")
road_actor_scenes = Array[PackedScene]([ExtResource("4_re2kk")])

[node name="Player" parent="RoadManager/vehicles" instance=ExtResource("4_re2kk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.89809, 1.60779, -0.516281)
drive_state = 2
visualize_lane = true
auto_register = false

[node name="Camera3D" type="Camera3D" parent="RoadManager/vehicles/Player"]
transform = Transform3D(1, 0, 0, 0, 0.96343, 0.267961, 0, -0.267961, 0.96343, -1.89809, 5.90092, 18.1379)
far = 300.0

[node name="Road_001" type="Node3D" parent="RoadManager"]
script = ExtResource("5_pvynn")
material_resource = ExtResource("6_11u7d")
use_lowpoly_preview = true
generate_ai_lanes = true
auto_free_vehicles = false
draw_lanes_editor = true
edge_containers = Array[NodePath]([NodePath(""), NodePath("")])
edge_rp_targets = Array[NodePath]([NodePath(""), NodePath("")])
edge_rp_target_dirs = Array[int]([-1, -1])
edge_rp_locals = Array[NodePath]([NodePath("RP_001"), NodePath("RP_002")])
edge_rp_local_dirs = Array[int]([0, 1])

[node name="RP_001" type="Node3D" parent="RoadManager/Road_001"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 21.9997)
script = ExtResource("7_qlg0i")
traffic_dir = Array[int]([2, 2, 1, 1])
lanes = Array[int]([2, 4, 4, 2])
prior_mag = 15.0
next_mag = 15.0
alignment = 1
prior_pt_init = NodePath("../RP_002")

[node name="ActorSpawner" type="Node3D" parent="RoadManager/Road_001/RP_001"]
script = ExtResource("8_8qnhs")
actor_manager_path = NodePath("../../../vehicles")

[node name="RP_002" type="Node3D" parent="RoadManager/Road_001"]
transform = Transform3D(0.999842, -0.000116941, 0.0178009, 0, 0.999978, 0.00656924, -0.0178013, -0.0065682, 0.99982, -0.677433, 0.25, -16.0496)
script = ExtResource("7_qlg0i")
traffic_dir = Array[int]([2, 2, 1, 1])
lanes = Array[int]([2, 4, 4, 2])
prior_mag = 15.0
next_mag = 15.0
alignment = 1
next_pt_init = NodePath("../RP_001")

[node name="ActorSpawner" type="Node3D" parent="RoadManager/Road_001/RP_002"]
script = ExtResource("8_8qnhs")
actor_manager_path = NodePath("../../../vehicles")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_055ar")

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5

[node name="DemoUiCommon" parent="UI/VBoxContainer" instance=ExtResource("10_farmj")]
layout_mode = 2

[node name="instructions" type="Label" parent="UI/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "up/down arrow to move
left/right to change lane"
horizontal_alignment = 1

[node name="spacer" type="Control" parent="UI/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="info_label" type="Label" parent="UI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Cars: ##"

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.151382, 0.988475, 0, -0.988475, 0.151382, 0, 3.50568, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_v4pga")
